--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,5 @@ FodyWeavers.xsd
 ./Proyecto_trivia_BED/appsettings.Development.json
 /Proyecto_trivia_BED/appsettings.Development.json
 /Proyecto_trivia_BED/appsettings.json
+/Proyecto_trivia_BED/Migrations/20241114032620_Inicial.cs
+/Proyecto_trivia_BED/Migrations/TriviaContextModelSnapshot.cs
