cambios en categorias y dificultades

--- a/Proyecto_trivia_BED/Proyecto_trivia_BED.csproj
+++ b/Proyecto_trivia_BED/Proyecto_trivia_BED.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controladores\Dificultad\" />
+    <Folder Include="Controladores\Trivia\API\DTO\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Utils\" />
   </ItemGroup>
