--- a/Proyecto_trivia_BED/Proyecto_trivia_BED.csproj
+++ b/Proyecto_trivia_BED/Proyecto_trivia_BED.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Controladores\TriviaController\Modelo\DTO\RespuestaDTO.cs" />
+    <None Include="Controladores\Trivia\Modelo\DTO\RespuestaDTO.cs" />
   </ItemGroup>
 
 </Project>
