corregido agregar categorias

--- a/Proyecto_trivia_BED/appsettings - Demo.json
+++ b/Proyecto_trivia_BED/appsettings - Demo.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=XXXXXX-XXXXXX\\SQLEXPRESS;Initial Catalog=Proyecto.TriviaContext;Integrated Security=True"
+    "DefaultConnection": "Data Source=DESKTOP-0D8QV41\\SQLEXPRESS;Initial Catalog=Proyecto.TriviaContext;Integrated Security=True"
   },
   "externalApiUrl": {
     "OpenTDBUrl": "https://opentdb.com"
