Reorganizacion de carpetas

--- a/Proyecto_trivia_BED/Proyecto_trivia_BED.csproj
+++ b/Proyecto_trivia_BED/Proyecto_trivia_BED.csproj
@@ -30,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Controladores\Trivia\Modelo\DTO\RespuestaDTO.cs" />
+    <None Include="Controladores\CTrivia\Servicio\DTO\RespuestaDTO.cs" />
   </ItemGroup>
 
 </Project>
